//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.devtools;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DevtoolsHost {
  //
  // General
  //
  
  // Subscribe to server-to-client events.
  rpc Events(google.protobuf.Empty) returns (stream Event);

  // Get client config.
  rpc GetConfig(google.protobuf.Empty) returns (GetConfigResponse);

  rpc ResetStorage(ResetStorageRequest) returns (google.protobuf.Empty);

  rpc EnableDebugLogging(EnableDebugLoggingRequest) returns (EnableDebugLoggingResponse);

  rpc DisableDebugLogging(EnableDebugLoggingRequest) returns (EnableDebugLoggingResponse);

  //
  // HALO
  //

  rpc GetKeyringKeys(GetKeyringKeysRequest) returns (GetKeyringKeysResponse);

  //
  // ECHO
  //

  rpc SubsribeToItems(SubscribeToItemsRequest) returns (stream SubscribeToItemsResponse);

  //
  // MESH
  //

  rpc GetNetworkPeers(GetNetworkPeersRequest) returns (GetNetworkPeersResponse);

  rpc SubscribeToNetworkTopics(google.protobuf.Empty) returns (stream SubscribeToNetworkTopicsResponse);

  rpc SubscribeToSignalStatus(google.protobuf.Empty) returns (stream SubscribeToSignalStatusResponse);

  rpc SubscribeToSignalTrace(google.protobuf.Empty) returns (stream SubscribeToSignalTraceResponse);
}

message Event {
  oneof payload {
    ReadyEvent ready = 1;
  }
}

message ReadyEvent {}

message GetConfigResponse {
  // JSON-encoded configuration object.
  string config = 1;
}

message EnableDebugLoggingRequest {
  string namespaces = 1;
}

message EnableDebugLoggingResponse {
  string enabledNamespaces = 1;
}

message DisableDebugLoggingRequest {
  string namespaces = 1;
}

message DisableDebugLoggingResponse {
  string enabledNamespaces = 1;
}

message GetKeyringKeysRequest {}

message GetKeyringKeysResponse {
  message KeyringKey {
    // String representation of they KeyType enum.
    string type = 1;
    
    bytes publicKey = 2;

    string added = 3;
    
    bool own = 4;

    bool trusted = 5;
  }

  // TODO(dmaretskyi): Use KeyRecord type from @dxos/credentials once cross-package imports are working.
  repeated KeyringKey keys = 1;
}

message ResetStorageRequest {}

message GetNetworkPeersRequest {
  bytes topic = 1;
}

message GetNetworkPeersResponse {
  message PeerInfo {
    bytes id = 1;

    // PeerState enum.
    string state = 2;
  
    repeated bytes connections = 3;
  }

  repeated PeerInfo peers = 1;
}

message SubscribeToItemsRequest {}

message SubscribeToItemsResponse {
  // JSON-encoded payload.
  string data = 1;
}

message SubscribeToNetworkTopicsResponse {
  message Topic {
    bytes topic = 1;
    string label = 2;
  }

  repeated Topic topics = 1;
}

message SubscribeToSignalStatusResponse {
  message SignalServer {
    string host = 1;

    // SignalApi.State enum.
    string state = 2;
    
    string error = 3;

    // Number of milliseconds before reconnection. 
    // TODO(dmaretskyi): Represent as absolute timestamp.
    int32 reconnectIn = 4;

    google.protobuf.Timestamp connectionStarted = 5;
    google.protobuf.Timestamp lastStateChange = 6;
  }

  repeated SignalServer servers = 1;
}

message SubscribeToSignalTraceResponse {
  // JSON-encoded events.
  repeated string events = 1;
}
